--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.maxart.zyo_shopify">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="zyo_shopify"
+        android:label="ZYO"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
