--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.0.11
+  new_version: ^0.3.0
 
 dev_dependencies:
   flutter_test:
